# sigmanix-chatbot

./: .env.example  .gitignore  .replit  CONTRIBUTING.md  ChatbotComponent.css  ChatbotComponent.jsx  README.md  REPLIT_DEPLOYMENT.md  REPLIT_QUICK_START.md  admin_routes.py  chatbot_production.py  data.txt  database.py  pyproject.toml  requirements.txt
