[project]
name = "sigmanix-chatbot"
version = "1.0.0"
description = "AI-Powered Chatbot for Sigmanix Tech"
authors = [{name = "Sigmanix Tech"}]
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.3",
    "Flask-CORS==4.0.0",
    "groq==0.5.0",
    "python-dotenv==1.0.1",
    "langchain==0.2.0",
    "langchain-community==0.2.1",
    "faiss-cpu==1.13.2",
    "sentence-transformers==2.2.0",
    "httpx==0.24.1",
    "gunicorn==21.2.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
